# teletest-api

./: .env.example  .gitignore  Dockerfile  README.md  aider.yml  conftest.py  generate_session.py  main.py  pyproject.toml
.github/workflows/: ghcr.yml  test.yml
clients/python-client/: __init__.py  pyproject.toml  teletest_api_client.py
clients/ts-client/: package.json  tsconfig.json
clients/ts-client/src/: index.ts
src/: app.py  models.py
teletest_api/: app.py  models.py
tests/: conftest.py  fake_telegram.py  real_bot.py  test_app.py
tests/real_bot/: .dockerignore  Dockerfile  README.md  docker-compose.yml  get_me.py  main.py  real_bot.py
ts-client/: package.json
