[project]
name = "teletest-api"
version = "0.2.0"
description = "FastAPI service for testing Telegram bots with a real user account"
license = {text = "MIT"}
authors = [{name = "Ilia Sukhorukov", email = "dexoon@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "telethon",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.0",
]
test = [
    "pytest>=8.4.1",
    "httpx>=0.28.1",
    "aiogram>=3.20.0.post0",
    "pytest-rerunfailures>=13.0", # Added pytest-rerunfailures
]

[tool.uv.workspace]
members = ["clients/python-client"]
